# Object_Detection

./: CMakeLists.txt  README.md
Sources/: CMakeLists.txt
Sources/Algorithms/: Algorithms.cpp  Algorithms.h  CMakeLists.txt
Sources/Interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondmainwindow.cpp  secondmainwindow.h  secondmainwindow.ui
Sources/Main/: CMakeLists.txt  main.cpp
Sources/Utils/: CMakeLists.txt  Camera.cpp  Camera.h  Utils.cpp  Utils.h
